GAP-36 fixed bug in lyers colors

--- a/src/src/components/map/Map.css
+++ b/src/src/components/map/Map.css
@@ -112,6 +112,6 @@
   /* right: 50px; */
   /* position: relative; */
   bottom: 30px;
-  border: 1px solid black;
+  
   z-index: 1000;
 }
