--- a/src/src/components/mapLegend/maplegend.css
+++ b/src/src/components/mapLegend/maplegend.css
@@ -39,6 +39,8 @@
             max-width: 300px !important;
             background-color: aliceblue;
             opacity: 0.7;
+            border-radius: 5px;
+            box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.3);
         }
 
         .test{
